v0.5.1
- support for mesh sorting levels
- only display appropriate custom object properties
- support mesh flags 'cast_shadow', 'camera oriented' and 'camera aligned'
- import prelit vertex material as basic vertex material for now
- support for per face surface types via face maps
- added support for vertex colors
- Bugfix: fix import of visibility channels of armature
- Bugfix: handle multiple hlod, hierarchy and animation chunks
- Bugfix: fix export when bones are not in tree order

v0.5.0 (10.06.20)
- use proper enums for vertex material shader properties
- create pivots for meshes on export if they have no parent bone
- create a bone for each hierarchy pivot on import (otherwise pivot order can not be maintained on roundtrip)
- reduced export time for meshes (O(n*n) -> O(n))
- handle empty/invalid/default materials correctly on export
- Bugfix: texture name got falsely '.dds' appended on export
- Bugfix: export proper opacity value of material (fixes invisible objects in W3DViewer)
- Bugfix: do not export uv coordinates if no texutre is used by the material
- Bugfix: fixed mesh triangulation on export
- Bugfix: use proper hierarchy name for animation and hlod on export

v0.4.7 (26.04.20)
- Bugfix: fixed installation issue

v0.4.6 (24.04.20)
- apply modifiers to meshes on export
- handle export of 'multi-user' meshes
- default material type is now 'VERTEX_MATERIAL'
- Bugfix: handle free vertices correctly
- Bugfix: handle already applied file extensions by user
- Bugfix: check for referenced armature case insensitive

v0.4.5 (11.03.20)
- split vertices with multiple uv coordinates on export
- use actual mesh normals on import
- export tangents and bitangents
- custom floating point visibility property for bones
- create armature for roottransform pivot
- Bugfix: parenting issue
- Bugfix: triangle distances
- Bugfix: proper bool string export

v0.4.4 (19.02.20)
- limit decimal digits in w3x files to 6
- Bugfix: use armature name as hierarchy ID